# articles_web

./: .env  :w  Cargo.toml  diagram
src/: main.rs
src/accounts/: forms.rs  handlers.rs  mod.rs  models.rs  routes.rs  schema.rs
src/accounts/migrations/2024-02-29-164733_create_accounts/: up.sql
src/accounts/migrations/2024-03-08-081822_create_user_profile/: up.sql
src/admin/: mod.rs  routes.rs
templates/: base.html  home.html
templates/accounts/: change_profile.html  dashboard.html  forgot_password.html  login.html  profile.html  register.html  reset_password.html
templates/admin/: base.html
templates/admin/admin/: dashboard.html  item_detail.html  model_detail.html
templates/admin/includes/: navbar.html
templates/includes/: alerts.html  csrf.html
