[package]
name = "web_app_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = "0.5"
tera = "1"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
chrono = "^0"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.10.0"
uuid = { version = "0.8", features = ["v4"]}

