[package]
name = "web_app_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = "0.5"
actix-csrf = "0.7.0"
actix-multipart = "0.4"
futures = "0.3"
validator = { version = "0.16", features = ["derive"] }
tera = "1"
diesel = { version = "2.1.0", features = ["postgres","r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
chrono = "^0"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.10.0"
uuid = { version = "0.8", features = ["v4"]}
rand = "0.8"
lettre = "0.10"
lettre_email = "0.9"
jsonwebtoken = "7.2.0"
sanitize-filename = "0.5.0"
